--- a/swak-fx/src/main/resources/fxml/MainPage.fxml
+++ b/swak-fx/src/main/resources/fxml/MainPage.fxml
@@ -19,9 +19,8 @@
 <?import javafx.scene.web.*?>
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
-	prefWidth="800.0" styleClass="panel,panel-primary" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.swak.hello.MainPage">
+	minHeight="-Infinity" minWidth="-Infinity" styleClass="panel,panel-primary" xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1">
 	<top>
 		<HBox fx:id="topPane" prefHeight="32.0" onDragDetected="#startMoveWindow"
 			onMouseClicked="#titleDoubleClick" onMouseDragged="#moveWindow"
@@ -32,33 +31,20 @@
 					<image>
 						<Image url="/images/logo.png" />
 					</image>
-					<HBox.margin>
-						<Insets />
-					</HBox.margin>
 				</ImageView>
 				<Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
 					<children>
-						<Label minHeight="-Infinity" prefHeight="32.0" textFill="#fcf8f8"
-							styleClass="h4">
-							<font>
-								<Font size="16.0" />
-							</font>
-							<padding>
-								<Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
-							</padding>
+						<Label fx:id="title" minHeight="-Infinity" prefHeight="32.0" styleClass="title">
 						</Label>
 					</children>
 				</Pane>
-				<ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
+				<ImageView styleClass="image-btn" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
 					preserveRatio="true">
 					<image>
 						<Image url="/images/安全.png" />
 					</image>
-					<HBox.margin>
-						<Insets left="5.0" right="5.0" />
-					</HBox.margin>
 				</ImageView>
-				<ImageView onMouseClicked="#hide" fitHeight="32.0"
+				<ImageView styleClass="image-btn" onMouseClicked="#minimize" fitHeight="32.0"
 					fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
 					<image>
 						<Image url="/images/托盘.png" />
@@ -67,7 +53,7 @@
 						<Insets left="5.0" right="5.0" />
 					</HBox.margin>
 				</ImageView>
-				<ImageView onMouseClicked="#maximize" fitHeight="32.0"
+				<ImageView styleClass="image-btn" onMouseClicked="#maximize" fitHeight="32.0"
 					fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
 					<image>
 						<Image url="/images/最大化.png" />
@@ -76,13 +62,13 @@
 						<Insets left="5.0" right="5.0" />
 					</HBox.margin>
 				</ImageView>
-				<ImageView onMouseClicked="#close" fitHeight="32.0"
+				<ImageView styleClass="image-btn" onMouseClicked="#close" fitHeight="32.0"
 					fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
 					<image>
 						<Image url="/images/关闭.png" />
 					</image>
 					<HBox.margin>
-						<Insets left="5.0" />
+						<Insets left="5.0"/>
 					</HBox.margin>
 				</ImageView>
 			</children>
