fx 下载的优化

--- a/swak-fx/src/test/resources/css/MainPage.css
+++ b/swak-fx/src/test/resources/css/MainPage.css
@@ -83,6 +83,9 @@
   -fx-background-color: #204d74;
   -fx-border-color: #122b40;
 }
+.download-panel .part-title--error {
+  -fx-text-fill: #999;
+}
 /******************************************************************************
  * 
  * Close button
